--- a/core/clients/Admin/css/sensorPanel.css
+++ b/core/clients/Admin/css/sensorPanel.css
@@ -12,7 +12,7 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-	background-color: #e5bdbd;
+	background-color: #cfea99;
 	border-left: 1px solid #EEE;
 	width: 22vw;
 	height: 100%;
@@ -34,30 +34,6 @@
 
 .sensor .sensorPhoneNumber {
 	text-align: left;
-}
-
-.creator {
-	background-color: black;
-	border-bottom: 1px solid white;
-}
-
-.creator div *{
-	display: inline-block;
-}
-
-.creator ul *{
-	display: inline-block;
-	padding: 0.5em;
-	text-align: center;
-	color: white;
-}
-
-.creator li {
-	margin: 0;
-}
-
-.creator form input {
-	color: black;
 }
 
 #sensorPanel .creator ul * {
