[css] better Creators

--- a/core/clients/Admin/css/creator.css
+++ b/core/clients/Admin/css/creator.css
@@ -1,7 +1,17 @@
 
 .creator {
-	background-color: black;
-	border-bottom: 1px solid white;
+	background-color: black; margin-top: -2.2rem; border-bottom: 1px solid white;
+	color: #EEE;
+	transition: margin-top .5s ease-in-out;
+}
+
+.creator div:last-child{
+	padding: .2rem;
+	text-align: center;
+}
+
+.creator.open {
+	margin-top: 0;
 }
 
 .creator div *{
@@ -19,7 +29,21 @@
 	margin: 0;
 }
 
-.creator form input {
-	padding: .5rem;
+.creator form {
+	padding: .3rem;
+}
+
+.creator input {
+	padding: .1rem .5rem; margin: .1rem;
 	color: black;
 }
+
+#sensorPanel .creator input:first-child{
+	width: 30%;
+}
+
+#sensorPanel .creator input:nth-child(2){
+	width: 50%;
+}
+
+
