--- a/core/clients/Admin/css/sensorPanel.css
+++ b/core/clients/Admin/css/sensorPanel.css
@@ -9,13 +9,8 @@
 */
 
 #sensorPanel {
-	position: absolute;
-	top: 0;
-	right: 0;
+	display: inline-block; position: absolute; top: 0; right: 0; width: 22vw; height: 100%; border-left: 1px solid #EEE;
 	background-color: #cfea99;
-	border-left: 1px solid #EEE;
-	width: 22vw;
-	height: 100%;
 }
 
 .sensor{
