When a sensor isn't updated in 12H, it's printed as disconnected on admin

--- a/core/clients/Admin/css/placePanel.css
+++ b/core/clients/Admin/css/placePanel.css
@@ -115,6 +115,10 @@
 	color: blue;
 }
 
+.ant.disconnected .quipu {
+	color: #B00
+}
+
 /* 6sense status */
 
 .ant .sense div.status,  .ant .sense div.settings{
