--- a/core/clients/Citizen/src/css/main.css
+++ b/core/clients/Citizen/src/css/main.css
@@ -1,5 +1,5 @@
 body{
-	background-color: black; /*WhiteSmoke*/
+	background-color: white; /*WhiteSmoke*/
     max-width: 500px;
     font-family: Lato, sans-serif;
 }
