--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,8 +18,10 @@ button a{
 	color: white;
 	text-decoration: none;
 }
-.open { color: green; font-size: 15px;}
-.closed { color: red; font-size: 15px;}
+.open { border-color: green; font-size: 15px;}
+.closed { border-color: red; font-size: 15px;}
+.border-open {  border: solid green 3px; font-size: 15px; }
+.border-closed { border: solid red 3px;  font-size: 15px; text-decoration : line-through;}
 .star { color: gold; }
 .no-star { color: lightgray; }
 .clickable { cursor: pointer;}
@@ -130,7 +132,6 @@ button a{
 	display: inline-block;
 	padding: 5px;
 	background-color: #cfd8dc;
-	border: 1px solid black;
 	border-radius: 5px;
 }
 #traffic {
