--- a/client/css/main.css
+++ b/client/css/main.css
@@ -25,7 +25,8 @@ button {
 	margin: 0 auto;
 }
 .overflow{
-	overflow: auto; 
+	overflow: scroll;
+	-webkit-overflow-scrolling: touch; 
 }
 
 header, nav{
@@ -47,7 +48,6 @@ article{
 	position: fixed;
 	background-color: #FAFAFA;
 	top: 40px;
-	/*bottom: 55px;*/
 	bottom: 0px;
 	width: 100%;
 }
@@ -114,25 +114,6 @@ article{
 	margin: 5px;
 	font-size: 12px;
 }
-/*.btn-recycling-center {
-	margin: 2px;
-	height: 50px;
-	border: none;
-	background: url('../img/recycling-center.svg') no-repeat center center;
-	color: #FFFFFF;
-	text-shadow: 0px 0px #000000;
-	vertical-align: bottom;
-	font-size: 16px;
-}
-.btn-container {
-	margin: 2px;
-	height: 50px;
-	border: none;
-	background: url('../img/container.svg') no-repeat center center;
-	color: #FFFFFF;
-	vertical-align: bottom;
-	font-size: 16px;
-}*/
 #mvp .background{
 	background: #ffffff url('../img/decheterie.jpg') no-repeat left center;
 	width: 100%;
@@ -178,27 +159,9 @@ article{
 	max-width: 700px;
 	background-color: #FAFAFA;
 	top: 40px;
-	/*bottom: 55px;*/
 	bottom: 0px;
 }
-/*
-#btn-map{
-	width: 160px;
-	vertical-align: middle;
-	margin-left: 10px;
-	color: #E400B9;
-	height: 40px;
-	font-size: 16px;
-	display: block;
-	border: none; 
-	background: url('../img/map.svg') no-repeat left center;
-	text-align: right;
-}
-.hide-map{
-	height: 0px;
-	background-color: red; 
-}
-*/
+
 .place{
 	width: 100%;
 	background-color: #FFFFFF;
@@ -268,11 +231,9 @@ article{
 }
 .panel-active{
 	display: block;
-	/*height: 120px;*/
 }
 .panel-hidden {
 	display: none;
-	/*height: 120px;*/
 }
 
 .place-no-infos {
