--- a/client/css/main.css
+++ b/client/css/main.css
@@ -9,13 +9,23 @@ BlueGrey50: #ECEFF1
 
 *{
     box-sizing: border-box;
-    
+}
+html, body{
+    height: 100%;
 }
 
 body{
     font-family: Lato, sans-serif;
     margin: 0px;
 }
+ul, ol, menu, li {
+    margin: 0;
+    padding: 0;
+}
+ul, menu {
+    list-style: none;
+}
+
 
 button:focus {
 	outline: none !important;
@@ -315,7 +325,7 @@ article .adapt-width{
 
 }
 .data{
-	display: hidden;
+	display: none;
 	color: #FFFFFF;
 	font-size: 1px;
 	height: 0;
