--- a/client/css/main.css
+++ b/client/css/main.css
@@ -40,7 +40,6 @@ header .adapt-width{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    
     background-color: #BDBDBD;
 }
 
@@ -68,6 +67,44 @@ nav{
 	bottom: 0;
 	height: 55px;
 }
+#logo{
+	color: #E400B9;
+	margin-top: 2px;
+	margin-left: 5px;
+	background-color: #BDBDBD;
+	float: left;
+	text-decoration: none;
+	vertical-align: middle;
+	font-size: 18px;
+}
+#navigation{
+	height: 55px;
+	background-color: #616161; 
+}
+.btn-recycling-center {
+	margin: 2px;
+	height: 50px;
+	border: none;
+	text-shadow: 0px 0px #000000;
+	vertical-align: bottom;
+	background: none;
+	font-size: 16px;
+}
+.btn-alternatives {
+	margin: 2px;
+	height: 50px;
+	border: none;
+	vertical-align: bottom;
+	background: none;
+	font-size: 16px;
+}
+.btn-active{
+	color: #FFFFFF;	
+}
+.btn-inactive{
+	color: #BDBDBD;	
+}
+
 article{
 	z-index: 1;
 	position: fixed;
@@ -107,10 +144,6 @@ article .adapt-width{
 	#searchbar input {
 		width: 250px;
 	}
-}
-#navigation{
-	height: 100%;
-	background-color: #616161; 
 }
 #sheet{
 	height: 100%;
@@ -154,7 +187,6 @@ article .adapt-width{
 	background: #ffffff url('../img/decheterie.jpg') no-repeat left center;
 	width: 100%;
 	height: 100%;
-	background-position: top center;
 	background-size: cover;
 }
 
