--- a/client/css/main.css
+++ b/client/css/main.css
@@ -191,13 +191,16 @@ article .adapt-width{
     display: flex;
     flex-direction: column;
     flex: 1;
-}
-
-#mvp .background{
-	background: #ffffff url('../img/decheterie.jpg') no-repeat left center;
-	width: 100%;
+    width: 100%;
 	height: 100%;
     flex-grow: 20;
+}
+
+#mvp.RC {
+	background: #ffffff url('../img/decheterie.jpg') no-repeat left center;
+}
+#mvp.PAV {
+	background: #ffffff url('../img/alternatives.jpg') no-repeat left center;
 }
 
 #mvp p {
@@ -205,7 +208,7 @@ article .adapt-width{
 	color: black;
 	width: 100%;
 	margin: 0 auto;
-	background-color: #FFFFFF; 	
+	background-color: rgba(255,255,255,0.7); 	
 }
 
 @media screen and (max-width: 320px) {
